@@ -94,10 +94,7 @@ void io_put_byte(uint32_t addr, uint8_t arg)
         case 0x00:	// rw <76...2..>
 			// %5: bit 0 of contrast (TI92)
 			if(tihw.calc_type == TI92 || tihw.calc_type == TI92p)
-			{
                 bit_chg(tihw.contrast,0,bit_get(arg,5));
-				hid_set_contrast(tihw.contrast);
-			}
         break;
         case 0x01:	// rw <.....2.0>
 			// %0 clr: interleave RAM (allows use of 256K of RAM)
@@ -227,24 +224,23 @@ void io_put_byte(uint32_t addr, uint8_t arg)
         case 0x1c:	// -w <..5432..>
         	// %[5-2] set: LCD RS (row sync) frequency, OSC2/((16-n)*8)
         	// %1111 turns off the RS completely (used when LCD is off)        	
-        	if((arg & 0x3c) == 0x3c)
-	            hid_lcd_on_off(0);
-            else
-	            hid_lcd_on_off(!0);
+			tihw.on_off = ((arg & 0x3c) == 0x3c) ? 0 : 1;
+			printf("tihw.on_off = %i\n", tihw.on_off);
         break;
         case 0x1d:	// -w <7..43210>
-			// %[3-1]: contrast
+			// %[3-0]: contrast
 			if(tihw.calc_type == TI92 || tihw.calc_type == TI92p)
 			{
-				// %[3-1]: bits <4321.> of contrast
-            	tihw.contrast = (tihw.contrast & 1) | ((arg & 15) << 1);
-            	hid_set_contrast(tihw.contrast);
+				// %[3-0]: bits <4321.> of contrast
+				static int avg = 0;				
+
+				avg = (avg + arg)/2;	// filter value
+            	tihw.contrast = (tihw.contrast & 1) | ((avg & 15) << 1);
             }
             else
             {
-            	// %[3-1]: LCD contrast bits 3-0 (bit 3 is msb on HW1)
+            	// %[3-0]: LCD contrast bits 3-0 (bit 3 is msb on HW1)
             	tihw.contrast = arg & 0x0f;
-            	hid_set_contrast(tihw.contrast);
             	
             	// %4: HW1: Screen disable (power down), HW2: LCD contrast bit 4 (msb)
 				if(io2_bit_tst(0x1f,0))
@@ -252,7 +248,7 @@ void io_put_byte(uint32_t addr, uint8_t arg)
                     bit_chg(tihw.contrast,4,bit_get(arg,4));
                 }
 				else
-					hid_lcd_on_off(!bit_get(arg,4));
+					tihw.on_off = bit_tst(arg,4) ? 0 : 1;	//hid_lcd_on_off(!bit_get(arg,4));
             }
         break;
         case 0x1e:
@@ -444,10 +440,7 @@ void io2_put_byte(uint32_t addr, uint8_t arg)
 		break;
 		case 0x1d:	// rw <7...3210>
 			// %1: Screen enable (clear this bit to shut down LCD)
-			if(bit_tst(arg,1))
-	            hid_lcd_on_off(!0);
-            else
-	            hid_lcd_on_off(0);
+			tihw.on_off = bit_tst(arg,1) ? 1 : 0;
 			break;
 		case 0x1f:	// rw <.....210>
 			if(!tihw.protect) tihw.io2[addr] = arg; else return;
