@@ -6,7 +6,9 @@ To do:
 	- stealth I/O and mem protect (done but not enabled)
 
 - 08/11/2004, version 1.80f: roms
-	PedRom is now provided with TiEmu as default OS.
+	- PedRom is now provided with TiEmu as default OS.
+	- bug: 'unexpected Xlib async reply' (Linux) found and fixed.
+	- improved LCD on/off and contrast
 	
 - 02/11/2004, version 1.80e: roms
 	Fixed various key binding bugs thanks to Kevin.
